test/tests/stages/6_statements_and_conditional_expressions/valid/else.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[23]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(0)
  ;
  if
  (
  identifier(a)
  )
  return
  const int(1)
  ;
  else
  return
  const int(2)
  ;
  }
