test/tests/stages/6_statements_and_conditional_expressions/invalid_parse/if_assignment.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[27]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(flag)
  =
  const int(0)
  ;
  int
  identifier(a)
  =
  if
  (
  identifier(flag)
  )
  const int(2)
  ;
  else
  const int(3)
  ;
  return
  identifier(a)
  ;
  }
